# mochick

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/ast/: nodes.rs
src/lexer/: README.md  tokens.rs
src/lexer/cursor/: analysis.rs  stream.rs
src/lexer/rules/: character.rs  delimiter.rs  identifier.rs  number.rs  string.rs
src/lexer/tokens/: delimiter.rs  keyword.rs  literal.rs  operator.rs
src/parser/: README.md  parser.rs
src/parser/grammer/: assignment.rs
src/reporter/: main.rs
src/reporter/diagonistic/: syntax.rs
test/: main.ly
